--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -141,7 +141,7 @@
         android:id="@+id/btnLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="70dp"
         android:paddingLeft="60dp"
         android:paddingRight="60dp"
         android:background="@drawable/background_enter_btn"
@@ -152,7 +152,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvValidationError" />
+        app:layout_constraintTop_toBottomOf="@+id/tvForgetPassword" />
 
     <TextView
         android:id="@+id/tvSignUp"
