--- a/app/src/main/res/layout/dropdown_item.xml
+++ b/app/src/main/res/layout/dropdown_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/subItemLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,11 +11,20 @@
     android:padding="10dp"
     android:orientation="horizontal">
 
+        <LinearLayout
+            android:id="@+id/selected_view"
+            android:layout_width="4dp"
+            android:layout_height="match_parent"
+            android:background="?selectedColorPrimary"
+            android:orientation="horizontal"
+            android:visibility="invisible"
+            tools:visibility="visible" />
+
         <TextView
             android:id="@+id/dropdownItemName"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
+            android:layout_weight="3"
             android:layout_marginLeft="20dp"
             android:fontFamily="@font/museo_san_rounded700"
             android:text="Dropdown Item"
@@ -24,9 +33,18 @@
 
         <ImageView
             android:id="@+id/fastInternet"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
             android:layout_weight="1"
             android:src="@drawable/ic_fast_internet"/>
+
+        <TextView
+            android:id="@+id/profile_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginStart="4dp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="?attr/accentOrTextSecondary" />
 
 </LinearLayout>
