--- a/app/src/main/res/layout/fragment_general.xml
+++ b/app/src/main/res/layout/fragment_general.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/navyBlue"
-    tools:context=".nav.GeneralFragment">
+    tools:context=".vpn.nav.GeneralFragment">
 
     <LinearLayout
         android:id="@+id/generalLayout"
