comment fragment layout

--- a/app/src/main/res/layout/fragment_comment.xml
+++ b/app/src/main/res/layout/fragment_comment.xml
@@ -61,56 +61,38 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_weight="1"
-            android:src="@drawable/ic_location_order" />
+            android:src="@drawable/ic_comment_title" />
 
         <TextView
             android:id="@+id/tvGeneralTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_weight="2"
+            android:layout_weight="26"
             android:fontFamily="@font/museo_san_rounded700"
-            android:text="Location Order"
+            android:text="Title"
             android:textColor="@color/white"
             android:textSize="18sp" />
 
-        <TextView
-            android:id="@+id/tvGeneral"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="20"
-            android:fontFamily="@font/museo_san_rounded700"
-            android:gravity="end"
-            android:text="Geography"
-            android:textColor="@color/lightGray"
-            android:textSize="18sp" />
-
-        <ImageView
-            android:id="@+id/angelGerenal"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_weight="1"
-            android:src="@drawable/ic_angle_small_down" />
-
     </LinearLayout>
 
-    <TextView
+    <EditText
         android:id="@+id/tvGeneralInfo"
+        android:inputType="text"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:fontFamily="@font/museo_san_rounded700"
         android:background="@drawable/background_nav_item_info"
-        android:text="Arange the Location List in ascending order of the alphabet,geography,or latency."
+        android:hint="Enter your title"
+        android:textColorHint="@color/lightGray"
+        android:textColor="@color/white"
         android:padding="10dp"
         android:justificationMode="inter_word"
-        android:gravity="fill_horizontal"
-        android:textColor="@color/lightGray"
+        android:gravity="center_vertical"
         android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@+id/locationLayout"
-        tools:layout_editor_absoluteX="97dp" />
+        app:layout_constraintTop_toBottomOf="@+id/locationLayout" />
 
     <LinearLayout
         android:id="@+id/DisplaylatencyLayout"
@@ -132,237 +114,50 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_weight="1"
-            android:src="@drawable/ic_latency" />
+            android:src="@drawable/ic_comment_text" />
 
         <TextView
             android:id="@+id/tvDisplaylatencyTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_weight="2"
+            android:layout_weight="25"
             android:fontFamily="@font/museo_san_rounded700"
-            android:text="Display Latency"
+            android:text="Message"
             android:textColor="@color/white"
             android:textSize="18sp" />
 
-        <TextView
-            android:id="@+id/tvDisplaylatency"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="20"
-            android:fontFamily="@font/museo_san_rounded700"
-            android:gravity="end"
-            android:text="Ms"
-            android:textColor="@color/lightGray"
-            android:textSize="18sp" />
-
-        <ImageView
-            android:id="@+id/angelDisplaylatency"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_weight="1"
-            android:src="@drawable/ic_angle_small_down" />
-
     </LinearLayout>
 
-    <TextView
+    <EditText
         android:id="@+id/tvDisplaylatencyInfo"
+        android:inputType="text"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="250dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:fontFamily="@font/museo_san_rounded700"
         android:background="@drawable/background_nav_item_info"
-        android:text="Display latency as signal strength bar or in milliseconds."
+        android:hint="Enter your Message"
+        android:textColorHint="@color/lightGray"
+        android:textColor="@color/white"
         android:padding="10dp"
         android:justificationMode="inter_word"
         android:gravity="fill_horizontal"
-        android:textColor="@color/lightGray"
         android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@+id/DisplaylatencyLayout"
-        tools:layout_editor_absoluteX="97dp" />
+        app:layout_constraintTop_toBottomOf="@+id/DisplaylatencyLayout" />
 
-    <LinearLayout
-        android:id="@+id/LanguageLayout"
-        android:layout_width="match_parent"
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnSend"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="20dp"
-        android:background="@drawable/background_nav_item"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:padding="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvDisplaylatencyInfo">
-
-        <ImageView
-            android:id="@+id/iconLanguage"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_weight="1"
-            android:src="@drawable/ic_language" />
-
-        <TextView
-            android:id="@+id/tvLanguageLayoutTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="2"
-            android:fontFamily="@font/museo_san_rounded700"
-            android:text="Language"
-            android:textColor="@color/white"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/tvLanguage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="20"
-            android:fontFamily="@font/museo_san_rounded700"
-            android:gravity="end"
-            android:text="English"
-            android:textColor="@color/lightGray"
-            android:textSize="18sp" />
-
-        <ImageView
-            android:id="@+id/angelLanguage"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_weight="1"
-            android:src="@drawable/ic_angle_small_down" />
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/tvLanguageInfo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:text="Send"
         android:fontFamily="@font/museo_san_rounded700"
-        android:background="@drawable/background_nav_item_info"
-        android:text="Localize supported language."
-        android:padding="10dp"
-        android:justificationMode="inter_word"
-        android:gravity="fill_horizontal"
-        android:textColor="@color/lightGray"
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@+id/LanguageLayout"
-        tools:layout_editor_absoluteX="97dp" />
-
-    <LinearLayout
-        android:id="@+id/AppearanceLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="20dp"
+        android:textColor="@color/white"
         android:background="@drawable/background_nav_item"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:padding="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvLanguageInfo">
-
-        <ImageView
-            android:id="@+id/iconAppearance"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_weight="1"
-            android:src="@drawable/ic_appearance" />
-
-        <TextView
-            android:id="@+id/tvAppearanceTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="2"
-            android:fontFamily="@font/museo_san_rounded700"
-            android:text="Appearance"
-            android:textColor="@color/white"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/tvAppearance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="20"
-            android:fontFamily="@font/museo_san_rounded700"
-            android:gravity="end"
-            android:text="Dark"
-            android:textColor="@color/lightGray"
-            android:textSize="18sp" />
-
-        <ImageView
-            android:id="@+id/angelAppearance"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_weight="1"
-            android:src="@drawable/ic_angle_small_down" />
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/tvAppearanceInfo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:fontFamily="@font/museo_san_rounded700"
-        android:background="@drawable/background_nav_item_info"
-        android:text="Light or Dark"
-        android:padding="10dp"
-        android:justificationMode="inter_word"
-        android:gravity="fill_horizontal"
-        android:textColor="@color/lightGray"
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@+id/AppearanceLayout"
-        tools:layout_editor_absoluteX="97dp" />
-
-    <LinearLayout
-        android:id="@+id/VersionLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="20dp"
-        android:background="@drawable/background_nav_item"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:padding="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvAppearanceInfo">
-
-        <TextView
-            android:id="@+id/VersionTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="2"
-            android:fontFamily="@font/museo_san_rounded700"
-            android:text="Version"
-            android:textColor="@color/white"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/tvVersion"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="20"
-            android:fontFamily="@font/museo_san_rounded700"
-            android:gravity="end"
-            android:text="1.0.0"
-            android:textColor="@color/lightGray"
-            android:textSize="18sp" />
-
-    </LinearLayout>
+        app:layout_constraintTop_toBottomOf="@+id/tvDisplaylatencyInfo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
